[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/NinePatch 2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 116
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackgroundDim" type="Panel" parent="."]
self_modulate = Color( 0.0313726, 0.0313726, 0.0313726, 0.364706 )
margin_left = -1872.0
margin_top = -1038.0
margin_right = 2282.0
margin_bottom = 1646.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 550.0
margin_bottom = 600.0
rect_min_size = Vector2( 550, 390 )
custom_constants/separation = 30

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
margin_right = 550.0
margin_bottom = 180.0
texture = ExtResource( 1 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -94.0
margin_right = 235.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 552.0
margin_bottom = 181.0

[node name="NinePatchRect3" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 550.0
margin_bottom = 390.0
texture = ExtResource( 1 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -105.0
margin_right = 235.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
text = "Back to main menu"
align = 1
autowrap = true

[node name="BackToMenuButton" type="Button" parent="MarginContainer/VBoxContainer/NinePatchRect3"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 552.0
margin_bottom = 181.0

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 550.0
margin_bottom = 600.0
texture = ExtResource( 1 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NinePatchRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.636
margin_top = -96.0
margin_right = 164.364
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/NinePatchRect2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 550.0
margin_bottom = 181.0

[node name="PausedLabel" type="Label" parent="."]
margin_left = -181.0
margin_top = -500.0
margin_right = 747.0
margin_bottom = -326.0
custom_fonts/font = SubResource( 2 )
text = "Game Paused"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NinePatchRect/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NinePatchRect3/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NinePatchRect2/QuitButton" to="." method="_on_QuitButton_pressed"]
